# cordova-plugin-blackboard-camera

./: .gitignore  package-lock.json  package.json  plugin.xml
hooks/: copy_native_files.js  modify-root-build-gradle.js  move_exifInterface.js  on-uninstall.js  support-kotlin.js
src/android/: AutoFitTextureView.kt  BlackboardCamera.kt  Camera2Fragment.kt  CameraActivity.kt  ElectronicBlackBoardManager.kt  ExifInterface2.java  ExifInterfaceFix.java  ExifInterfaceUtils.java  KotlinXMP.kt  PhotoInfo.kt  PictureData.kt  SensorOrientation.kt  XmpUtil.java  build-extras.gradle  strings.xml
src/android/cpp/: CMakeLists.txt  native-lib.cpp
src/android/cpp/JCOMSIA_HashLib/: app1.c  app1.h  app5.c  app5.h  base64.c  base64.h  common.c  common.h  exif.c  exif.h  sha256.c  sha256.h  svg.c  svg.h  writeHashLib.c  writeHashLib.h
src/android/cpp/JCOMSIA_HashLib/libexpat/: expat_config.h  xmlparse.c  xmlrole.c  xmltok.c
src/android/drawable/: ic_camera.xml  ic_circle.xml  ic_photo_camera.xml  round_button.xml
src/android/layout/: activity_main.xml
src/android/layout-land/: fragment_camera2.xml
src/android/layout-port/: fragment_camera2.xml
src/ios/: BlackboardCamera.swift  CameraViewController.swift  ElectronicBlackBoardManager.swift  Main.storyboard  PhotoInfo.swift  PictureData.swift
src/ios/AppPotSDKforSwift.framework/: Info.plist
src/ios/AppPotSDKforSwift.framework/Headers/: APAuthInfo.h  APEntityManager.h  APFileUploadResponse.h  APGateway.h  APGroupQuery.h  APMailRequest.h  APMessageOptions.h  APObject.h  APQuery.h  APResponse.h  APSearchResult.h  APSelect.h  APService.h  APTypeDefinition.h  APUser.h  APUserGroup.h  APUserRole.h  AppPot.h  AppPotSDKforSwift-Swift.h  AppPotSDKforSwift.h
src/ios/AppPotSDKforSwift.framework/Modules/: module.modulemap
src/ios/AppPotSDKforSwift.framework/Modules/AppPotSDKforSwift.swiftmodule/: arm.swiftdoc  arm.swiftmodule  arm64-apple-ios.swiftdoc  arm64.swiftmodule  i386-apple-ios-simulator.swiftmodule  i386.swiftdoc  x86_64-apple-ios-simulator.swiftmodule  x86_64.swiftdoc
src/ios/AppPotSDKforSwift.framework/Modules/AppPotSDKforSwift.swiftmodule/Project/: arm64-apple-ios.swiftsourceinfo  armv7-apple-ios.swiftsourceinfo  i386-apple-ios-simulator.swiftsourceinfo  x86_64.swiftsourceinfo
src/ios/AppPotSDKforSwift.framework/_CodeSignature/: CodeResources
src/ios/framework/JACICHashLib.framework/: Info.plist  JACICHashLib
src/ios/framework/JACICHashLib.framework/Headers/: JACIC.h  JACICHashLib.h
src/ios/framework/JACICHashLib.framework/Modules/: module.modulemap
src/ios/framework/JCOMSIAHashLib.framework/: Info.plist  JCOMSIAHashLib
src/ios/framework/JCOMSIAHashLib.framework/Headers/: JCOMSIA.h  JCOMSIAHashLib.h
src/ios/framework/JCOMSIAHashLib.framework/Modules/: module.modulemap
src/ios/framework/JCOMSIAHashLib.framework/_CodeSignature/: CodeResources
www/: blackboard_camera.js
